--- a/views/post.pug
+++ b/views/post.pug
@@ -4,6 +4,6 @@ block content
 	main.mb-5
 		.mx-auto.my-4(style='max-width: 45rem;')
 			.my-3.mx-3
-				h6.text-muted.fs-6.fw-normal.text-center= post.createdAt 
+				h6.text-muted.fs-6.fw-normal.text-center= shortDate 
 				h1.fw-bold.lh-1.position-relative.text-center= post.title
 				p.text-start.fs-5.mt-5.trix-content= post.body
