add edit and delete buttons to post page

--- a/views/index.pug
+++ b/views/index.pug
@@ -10,5 +10,6 @@ block content
 					p.card-text.text-start.trix-content= post.getShortBody()
 					.text-center
 						a.btn.btn-light.stretched-link(href=`/${post.id}`) Read more
-		.mx-auto.my-5(style='max-width: 40rem;')
-			a.btn.btn-primary.d-block.mx-auto(style='max-width: 7rem;' href=`/new`) Create post
+	.mx-auto.my-5(style='max-width: 40rem;')
+		.text-center
+			a.btn.btn-primary(href=`/new`) Create post
