--- a/views/form.pug
+++ b/views/form.pug
@@ -6,7 +6,7 @@ block content
             // title
             .mb-5
             label.form-label(for='title') Title
-            input#title.form-control(type='title' name='title' value='Title')
+            input#title.form-control(type='title' name='title')
 
             // body
             .mb-5
