--- a/views/post.pug
+++ b/views/post.pug
@@ -7,7 +7,6 @@ block content
 				h6.text-muted.fs-6.fw-normal.text-center= post.getShortDate() 
 				h1.fw-bold.lh-1.position-relative.text-center= post.title
 				p.text-start.fs-5.mt-5.trix-content= post.body
-	.mx-auto.my-5(style='max-width: 40rem;')
-		.text-center
-			a.btn.btn-primary.mx-2(href=`/edit/${post.id}`) Edit post
-			a.btn.btn-danger.mx-2(href=`/destroy/${post.id}`) Delete post
+			.text-center.mt-5
+				a.btn.btn-primary.mx-2(href=`/edit/${post.id}`) Edit post
+				a.btn.btn-danger.mx-2(href=`/destroy/${post.id}`) Delete post
