--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,10 +14,11 @@ html(lang="en")
 		link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC' crossorigin='anonymous')
 		
 		// trix
-		link(rel='stylesheet' type='text/css' href='static/stylesheets/trix.css')
-		script(type='text/javascript' src='static/js/trix.js')
+		link(rel='stylesheet' type='text/css' href='/static/stylesheets/trix.css')
+		script(type='text/javascript' src='/static/js/trix.js')
 		
-		// app css
+		// app js & css
+		script(type='text/javascript' src='/static/js/app.js')
 		link(rel='stylesheet' type='text/css' href='static/stylesheets/style.css')
 		
 	body
