add authorization to show appropriate routes and view components to logged in users

--- a/views/form.pug
+++ b/views/form.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
     .container-md.pt-3.pb-5.mb-5(style='max-width: 45rem;')
-        form(action="/", method="post")
+        form(action="/new", method="post")
             // title
             .mb-5
             label.form-label(for='title') Title
