--- a/views/index.pug
+++ b/views/index.pug
@@ -12,4 +12,5 @@ block content
 						a.btn.btn-light.stretched-link(href=`/${post.id}`) Read more
 		.mx-auto.my-5(style='max-width: 40rem;')
 			.text-center
-				a.btn.btn-primary(href=`/new`) Create post
+				if loggedIn
+					a.btn.btn-primary(href=`/new`) Create post
