add footer and style improvements

--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -1,1 +1,7 @@
-footer 
+footer
+	.my-5.pt-3.pb-5.text-center
+		small.text-muted 
+			|View on 
+			a.link-secondary(href='https://github.com/mthurmond/express-blog') github
+			|&nbsp;&nbsp;|&nbsp;&nbsp;Design from 
+			a.link-secondary(href='https://www.hey.com/world/') HEY
