--- a/views/index.pug
+++ b/views/index.pug
@@ -6,8 +6,8 @@ block content
 			.card.mx-auto.my-4.shadow(style='max-width: 40rem;')
 				.card-body.my-3.mx-3
 					h6.card-subtitle.text-muted.fs-6.fw-normal.text-center= post.getShortDate() 
-					h5.card-title.fs-2.mb-3.text-center= post.title
-					p.card-text.text-start.trix-content= post.getShortBody()
+					h5.card-title.fs-2.fw-bold.mb-3.text-center= post.title
+					p.card-text.text-start.trix-content(style='font-size: 1.15rem;')= post.getShortBody()
 					.text-center
 						a.btn.btn-light.stretched-link(href=`/${post.id}`) Read more
 		.mx-auto.my-5(style='max-width: 40rem;')
