add padding to homepage

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-	main.mb-5
+	main.mb-5.px-3
 		each post in posts
 			.card.mx-auto.my-4.shadow(style='max-width: 40rem;')
 				.card-body.my-3.mx-3
