--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,11 +9,11 @@ html(lang="en")
 		// favicon
 		link(rel='icon' type='image/png' sizes='16x16' href='/static/img/mt-avatar.png')
 		
-		// Required meta tags, for bootstrap? 
+		// meta tags
 		meta(charset='utf-8')
 		meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
 		
-		// Bootstrap CSS for styling and layout
+		// bootstrap CSS for styling and layout
 		link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC' crossorigin='anonymous')
 		
 		// trix
@@ -30,3 +30,6 @@ html(lang="en")
 		block content
 		
 		include includes/footer.pug
+		
+		// bootstrap js for modals and other components
+		script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js' integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM' crossorigin='anonymous')
