--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -1,5 +1,6 @@
 header
-	a.text-decoration-none(href='/')
-		.my-5.pt-4.text-center
-			img(src='/static/img/mt-avatar.png' width='50px' height='50px')
-			p.fs-6.text-uppercase.text-muted.mt-1.blog-name-spacing Matt Thurmond
+	.pt-4.my-5.text-center
+		.mx-auto(style='max-width: 40rem;')
+			a.text-decoration-none(href='/')
+				img(src='/static/img/mt-avatar.png' width='50px' height='50px')
+				p.fs-6.text-uppercase.text-muted.mt-1.blog-name-spacing Matt Thurmond
