--- a/views/post.pug
+++ b/views/post.pug
@@ -5,7 +5,7 @@ block content
 		.mx-auto.my-4(style='max-width: 45rem;')
 			.my-3.mx-3
 				h6.text-muted.fs-6.fw-normal.text-center= post.getShortDate() 
-				h1.fw-bold.lh-1.position-relative.text-center= post.title	
+				h1.fw-bold.position-relative.text-center= post.title	
 				.pt-4.trix-content(style='font-size: 1.2rem;')
 					!= post.body
 			.text-center.mt-5
