--- a/views/edit.pug
+++ b/views/edit.pug
@@ -14,6 +14,14 @@ block content
             input#x(type='hidden' name='body' value=post.body)
             trix-editor.trix-content(input='x')
 
+            // status
+            .mb-5
+            label.form-label(for='status') Status (current: #{post.status})
+            select#status.form-control.form-select(type='status' name='status' value=post.status)
+                option(selected='') 
+                option(value='live') Live
+                option(value='draft') Draft
+
             // action buttons
             .mb-5
             input.btn.btn-secondary(type='button' name='cancel' value='Cancel' onClick=`window.location.href="/${post.slug}";`)
