--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,15 @@
 .blog-name-spacing {
   letter-spacing: 0.1rem;
 }
+
+.blog-alert-draft {
+  border-style: solid; 
+  border-width: thin; 
+  border-color: lightgrey;
+  background-color: #f8f9fa; 
+  margin-left: auto; 
+  margin-right: auto; 
+  width: 44em;
+  font-weight: bold;
+  text-align: center;
+}
