--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,9 @@ block content
 			// only show draft posts if user logged in
 			if loggedIn || post.status == 'live' 
 				.card.mx-auto.my-4.shadow(style='max-width: 40rem;')
-					.card-body.my-3.mx-3
+					.card-body.my-3.mx-3.position-relative
+						if post.status == 'draft'
+							span.badge.bg-light.text-black-50.rounded-pill.position-absolute.top-0.end-0(style='font-size: 0.9em;') Draft
 						h6.card-subtitle.text-muted.fs-6.fw-normal.text-center= post.getShortDate() 
 						h5.card-title.fs-2.fw-bold.mb-3.text-center= post.title
 						p.card-text.text-start.trix-content(style='font-size: 1.15rem;')= post.getShortBody()
