--- a/views/new.pug
+++ b/views/new.pug
@@ -14,6 +14,13 @@ block content
             input#x(type='hidden' name='body')
             trix-editor.trix-content(input='x')
 
+            // status
+            .mb-5
+            label.form-label(for='status') Status
+            select#status.form-control.form-select(type='status' name='status')
+                option(value='live' selected) Live
+                option(value='draft') Draft
+
             // action buttons
             .mb-5
             input.btn.btn-secondary(type='button' name='cancel' value='Cancel' onClick="window.location.href='/';")
