--- a/views/index.pug
+++ b/views/index.pug
@@ -3,17 +3,19 @@ extends layout
 block content
 	main.mb-5.px-3
 		each post in posts
-			// only show draft posts if user logged in
-			if loggedIn || post.status == 'live' 
-				.card.mx-auto.my-4.shadow(style='max-width: 40rem;')
-					.card-body.my-3.mx-3.position-relative
-						if post.status == 'draft'
-							span.badge.bg-light.text-black-50.rounded-pill.position-absolute.top-0.end-0(style='font-size: 0.9em;') Draft
-						h6.card-subtitle.text-muted.fs-6.fw-normal.text-center= post.getShortDate() 
-						h5.card-title.fs-2.fw-bold.mb-3.text-center= post.title
-						p.card-text.text-start.trix-content(style='font-size: 1.15rem;')= post.getShortBody()
-						.text-center
-							a.btn.btn-light.stretched-link(href=`/${post.slug}`) Read more
+			.card.mx-auto.my-4.shadow(style='max-width: 40rem;')
+				.card-body.my-3.mx-3.position-relative
+					if post.status == 'draft'
+						span.badge.bg-light.text-black-50.rounded-pill.position-absolute.top-0.end-0(style='font-size: 0.9em;') Draft
+					h6.card-subtitle.text-muted.fs-6.fw-normal.text-center= post.getShortDate() 
+					h5.card-title.fs-2.fw-bold.mb-3.text-center= post.title
+					p.card-text.text-start.trix-content(style='font-size: 1.15rem;')= post.getShortBody()
+					.text-center
+						a.btn.btn-light.stretched-link(href=`/${post.slug}`) Read more
+		if nextPage 
+			.mx-auto.my-5(style='max-width: 40rem;')
+				.text-center
+					a.btn.blog-pagination-button(href=`/page/${nextPage}`) See more posts &raquo;
 		if loggedIn
 			.mx-auto.my-5(style='max-width: 40rem;')
 				.text-center
