--- a/views/edit.pug
+++ b/views/edit.pug
@@ -28,4 +28,4 @@ block content
             // action buttons
             .mb-5
             input.btn.btn-secondary(type='button' name='cancel' value='Cancel' onClick=`window.location.href="/${post.slug}";`)
-            button.btn.btn-primary.mx-3(type='submit') Submit
+            button.btn.btn-primary.mx-3(type='submit') Save
