--- a/views/new.pug
+++ b/views/new.pug
@@ -24,4 +24,4 @@ block content
             // action buttons
             .mb-5
             input.btn.btn-secondary(type='button' name='cancel' value='Cancel' onClick="window.location.href='/';")
-            button.btn.btn-primary.mx-3(type='submit') Submit
+            button.btn.btn-primary.mx-3(type='submit') Save
