--- a/views/edit.pug
+++ b/views/edit.pug
@@ -26,6 +26,6 @@ block content
                     option(value='draft' selected) Draft
 
             // action buttons
-            .mb-5
-            input.btn.btn-secondary(type='button' name='cancel' value='Cancel' onClick=`window.location.href="/${post.slug}";`)
-            button.btn.btn-primary.mx-3(type='submit') Save
+            .text-center.mt-5.blog-sticky
+                input.btn.btn-secondary(type='button' name='cancel' value='Cancel' onClick=`window.location.href="/${post.slug}";`)
+                button.btn.btn-primary.mx-3(type='submit') Save
