--- a/views/new.pug
+++ b/views/new.pug
@@ -22,6 +22,6 @@ block content
                 option(value='draft') Draft
 
             // action buttons
-            .mb-5
-            input.btn.btn-secondary(type='button' name='cancel' value='Cancel' onClick="window.location.href='/';")
-            button.btn.btn-primary.mx-3(type='submit') Save
+            .text-center.mt-5.blog-sticky
+                input.btn.btn-secondary(type='button' name='cancel' value='Cancel' onClick="window.location.href='/';")
+                button.btn.btn-primary.mx-3(type='submit') Save
