warn user if exiting new or edit form with changes

--- a/views/edit.pug
+++ b/views/edit.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
     .container-md.pt-3.pb-5.mb-5(style='max-width: 45rem;')
-        form(action=`/edit/${post.slug}`, method="post")
+        form#blog-form(action=`/edit/${post.slug}`, method="post")
             // title
             .mb-5
             label.form-label(for='title') Title
@@ -26,6 +26,6 @@ block content
                     option(value='draft' selected) Draft
 
             // action buttons
-            .text-center.mt-5.blog-sticky
-                input.btn.btn-secondary(type='button' name='cancel' value='Cancel' onClick=`window.location.href="/${post.slug}";`)
-                button.btn.btn-primary.mx-3(type='submit') Save
+            #blog-form-buttons.text-center.mt-5.blog-sticky
+                input.btn.btn-secondary(type='button' name='cancel-edited-post' value='Cancel' data-slug=post.slug)
+                button.btn.btn-primary.mx-3(type='submit' name='submit-post') Save
