require title field

--- a/views/edit.pug
+++ b/views/edit.pug
@@ -6,7 +6,7 @@ block content
             // title
             .mb-5
             label.form-label(for='title') Title
-            input#title.form-control(type='title' name='title' value=post.title)
+            input#title.form-control(type='title' name='title' value=post.title required)
 
             // body
             .mb-5
