--- a/views/new.pug
+++ b/views/new.pug
@@ -6,7 +6,7 @@ block content
             // title
             .mb-5
             label.form-label(for='title') Title
-            input#title.form-control(type='title' name='title')
+            input#title.form-control(type='title' name='title' required)
 
             // body
             .mb-5
