add validation to post edit and create forms

--- a/views/new.pug
+++ b/views/new.pug
@@ -2,17 +2,18 @@ extends layout
 
 block content
     .container-md.pt-3.pb-5.mb-5(style='max-width: 45rem;')
-        form#blog-form(action="/new", method="post")
+        form#blog-form(action="/new", method="post" novalidate)
             // title
             .mb-5
             label.form-label(for='title') Title
-            input#title.form-control(type='title' name='title' required)
+            input#blog-post-title.form-control(type='title' name='title' required)
 
             // body
             .mb-5
             label.form-label(for='body') Body
             input#x(type='hidden' name='body')
             trix-editor.trix-content(input='x')
+            #blog-invalid-message.d-none Please enter post content.
 
             // status
             .mb-5
@@ -22,6 +23,6 @@ block content
                 option(value='draft') Draft
 
             // action buttons
-            #blog-form-buttons.text-center.mt-5.blog-sticky
-                input.btn.btn-secondary(type='button' name='cancel-new-post' value='Cancel')
+            .text-center.mt-5.blog-sticky
+                input.blog-cancel.btn.btn-secondary(type='button' name='cancel-new-post' value='Cancel')
                 button.btn.btn-primary.mx-3(type='submit' name='submit-post') Save
