fix padding so trix buttons don't require horizontal scroll

--- a/views/new.pug
+++ b/views/new.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-    .container-md.pt-3.pb-5.mb-5(style='max-width: 45rem;')
+    .container-md.pt-3.pb-5.px-0.mb-5(style='max-width: 45rem;')
         form#blog-form(action="/new", method="post" novalidate)
             // title
             .mb-5
