--- a/views/new.pug
+++ b/views/new.pug
@@ -7,11 +7,15 @@ block content
             .mb-5
             textarea#blog-post-title.form-control(rows='1' name='title' placeholder="Title" required)
 
-            // body
-            .mb-2
-            input#x(type='hidden' name='body')
-            trix-editor.trix-content.pt-0(input='x' placeholder="Share something...")
-            #blog-invalid-message.d-none Please enter post content.
+            // quill
+            input#quill-input(name='body' type='hidden')
+            #editor
+
+            // trix
+            //- .mb-2
+            //- input#x(type='hidden' name='body2')
+            //- trix-editor.trix-content.pt-0(input='x' placeholder="Share something...")
+            //- #blog-invalid-message.d-none Please enter post content.
 
             // status
             .mb-5
