add quill editor to post view screen

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -23,6 +23,10 @@ html(lang="en")
 		// app js & css
 		script(type='text/javascript' src='/static/js/app.js')
 		link(rel='stylesheet' type='text/css' href='/static/stylesheets/style.css')
+
+		// quill
+		link(rel='stylesheet' type='text/css' href='/quill/quill.snow.css')
+		script(type='text/javascript' src='/quill/quill.js')
 		
 	body
 		include includes/header.pug
