--- a/views/post.pug
+++ b/views/post.pug
@@ -2,15 +2,20 @@ extends layout
 
 block content
 	main.mb-5
-		.mx-auto.my-4(style='max-width: 45rem;')
+		#post-view.mx-auto.my-4(style='max-width: 45rem;')
 			.my-3.mx-3
 				if post.status == 'draft'
 					.text-center 
 						.alert.alert-secondary.blog-alert-draft.text-black-50.py-0.mb-4(role='alert') Draft
 				h6.text-muted.fs-6.fw-normal.text-center= post.getShortDate() 
 				h1.fw-bold.text-center= post.title
-				.pt-4.trix-content(style='font-size: 1.2rem;')
-					!= post.body
+				// quill body
+				input#quill-input.quill-read-only(name='body' type='hidden' value=post.body)
+				#editor.quill-read-only
+				// trix body 
+				//- .pt-4.trix-content(style='font-size: 1.2rem;')
+					// != post.body
+
 			if loggedIn
 				.text-center.blog-sticky
 					a.btn.btn-primary.mx-2(href=`/edit/${post.slug}`) Edit post
