--- a/views/layout.pug
+++ b/views/layout.pug
@@ -25,11 +25,23 @@ html(lang="en")
 		link(rel='stylesheet' type='text/css' href='/static/stylesheets/style.css')
 		
 	body
-		include includes/header.pug
+		case page
+			when 'new'
+				- break
+			when 'edit'
+				- break
+			default
+				include includes/header.pug
 		
 		block content
-		
-		include includes/footer.pug
+	
+		case page
+			when 'new'
+				- break
+			when 'edit'
+				- break
+			default
+				include includes/footer.pug
 		
 		// bootstrap js for modals and other components
 		script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js' integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM' crossorigin='anonymous')
