--- a/views/login.pug
+++ b/views/login.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
     .container-md.pt-3.pb-5.mb-5(style='max-width: 45rem;')
-        form(action="/login", method="post")
+        form(action=formAction, method="post")
             // email
             .mb-5
             label.form-label(for='email') Email
@@ -15,4 +15,4 @@ block content
 
             // button
             .mb-5
-            button.btn.btn-primary(type='submit') Login
+            button.btn.btn-primary(type='submit')= buttonLabel
