--- a/views/layout.pug
+++ b/views/layout.pug
@@ -30,6 +30,8 @@ html(lang="en")
 				- break
 			when 'edit'
 				- break
+			when 'home'
+				- break
 			default
 				include includes/header.pug
 		
@@ -39,6 +41,8 @@ html(lang="en")
 			when 'new'
 				- break
 			when 'edit'
+				- break
+			when 'home'
 				- break
 			default
 				include includes/footer.pug
