--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -2,5 +2,8 @@ header
 	.pt-4.my-5.text-center
 		.mx-auto(style='max-width: 40rem;')
 			a.text-decoration-none(href='/')
-				img(src='/static/img/mt-avatar.png' width='50px' height='50px')
-				p.fs-6.text-uppercase.text-muted.mt-1.blog-name-spacing Matt Thurmond
+				if uploadedAvatar
+					img.rounded-circle(src='/static/img/mt-avatar.png' width='50px' height='50px')
+				else
+					img.rounded-circle(src=defaultAvatar width='50px' height='50px')
+				p.fs-6.text-uppercase.text-muted.mt-1.blog-name-spacing= name
