--- a/views/login.pug
+++ b/views/login.pug
@@ -3,6 +3,13 @@ extends layout
 block content
 	.container-md.pt-3.pb-5.mb-5(style='max-width: 45rem;')
 		form(action=formAction, method="post")
+					
+			if page == 'register'
+				// name
+				.mb-5
+				label.form-label(for='name') Full name
+				input#name.form-control(type='text' name='name')
+
 			// email
 			.mb-5
 			label.form-label(for='email') Email
