--- a/views/index.pug
+++ b/views/index.pug
@@ -15,6 +15,6 @@ block content
 		if nextPage 
 			.text-center.mt-5
 				a.btn.blog-pagination-button(href=`/page/${nextPage}`) See more posts &raquo;
-		if loggedIn
+		if userId
 			.text-center.blog-sticky.pt-5
 				a.btn.btn-primary(href=`/new`) Create post
