show generic header on error page

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -36,6 +36,8 @@ html(lang="en")
 				include includes/main-header.pug
 			when 'register'
 				include includes/main-header.pug
+			when 'error'
+				include includes/main-header.pug
 			default
 				include includes/header.pug
 		
