allow user to change password

--- a/views/login.pug
+++ b/views/login.pug
@@ -8,17 +8,17 @@ block content
 				// name
 				.mb-5
 				label.form-label(for='name') Full name
-				input#name.form-control(type='text' name='name' required)
+				input#name.form-control(type='text' name='name' autocomplete='name' required)
 
 			// email
 			.mb-5
 			label.form-label(for='email') Email
-			input#email.form-control(type='email' name='email' required)
+			input#email.form-control(type='email' name='email' autocomplete='email' required)
 
 			// password
 			.mb-5
 			label.form-label(for='password') Password
-			input#password.form-control(type='password' name='password' required)
+			input#password.form-control(type='password' name='password' autocomplete='password' required)
 
 			// button
 			.mb-5
