--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -8,11 +8,14 @@ header
 							img.rounded-circle(src=photo width='50px' height='50px')
 						else
 							img.rounded-circle(src=defaultAvatar width='50px' height='50px')
-						.dropdown.position-absolute.top-50.end-0.translate-middle-y(style='z-index: 10;')
-							a.text-decoration-none(href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false") Menu
-								ul.dropdown-menu(aria-labelledby="dropdownMenuLink")
-									li
-										a.dropdown-item(href="/settings") Edit profile
-									li
-										a.dropdown-item(href="/logout") Log out
-				p.fs-6.text-uppercase.text-muted.mt-1.blog-name-spacing= name
+				p.d-inline-block.fs-6.text-uppercase.text-muted.mt-1.blog-name-spacing= name
+				.d-inline-block.dropdown
+					a.text-decoration-none(href='#' role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false")
+						svg.ms-1.bi.bi-caret-down-square(xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#6c757d" viewBox="0 0 20 20")
+							path(d="M3.626 6.832A.5.5 0 0 1 4 6h8a.5.5 0 0 1 .374.832l-4 4.5a.5.5 0 0 1-.748 0l-4-4.5z")
+							path(d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm15 0a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2z")
+						ul.dropdown-menu(aria-labelledby="dropdownMenuLink")
+							li
+								a.dropdown-item(href="/settings") Edit profile
+							li
+								a.dropdown-item(href="/logout") Log out
