use generic favicon

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,7 +7,7 @@ html(lang="en")
 			title Matt Thurmond
 		
 		// favicon
-		link(rel='icon' type='image/png' sizes='16x16' href='/static/img/mt-avatar.png')
+		link(rel='icon' type='image/png' sizes='16x16' href='/static/img/favicon-16x16.png')
 		
 		// meta tags
 		meta(charset='utf-8')
