add uploads directory

--- a/views/home.pug
+++ b/views/home.pug
@@ -6,6 +6,7 @@ block content
 			.display-5.fw-bold.display-5.mt-2 Min blog
 		div
 			.display-6.mt-2 A calmer blog with no distractions. 
+			// or "Share your stories without distractions."
 		div.mt-2
 			a.mt-2.btn.btn-primary(href=`/login`) Login
 		div.mt-2
