cleanup homepage mobile formatting

--- a/views/home.pug
+++ b/views/home.pug
@@ -3,9 +3,9 @@ extends layout
 block content
 	div.d-flex.flex-column.justify-content-center.align-items-center(style="height: 100vh;")
 		div
-			.display-5.fw-bold.display-5.mt-2 Min blog
+			.display-5.fw-bold.mt-2 Min blog
 		div
-			.display-6.mt-2 A calmer blog with no distractions. 
+			.display-6.mt-2.px-3.text-center A calmer blog with no distractions.
 			// or "Share your stories without distractions."
 		div.mt-2
 			a.mt-2.btn.btn-primary(href=`/login`) Login
