cleanup login page mobile formatting

--- a/views/includes/main-header.pug
+++ b/views/includes/main-header.pug
@@ -4,4 +4,4 @@ main-header
 			div
 				.display-5.fw-bold.display-5.mt-2 Min blog
 			div
-				.display-6.mt-2 A calmer blog with no distractions.
+				.display-6.mt-2.text-center.px-2 A calmer blog with no distractions.
