--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -2,7 +2,7 @@ header
 	.container(style='max-width: 60em;')
 		.pt-4.my-5.text-center
 			.mx-auto(style='max-width: 40rem;')
-				a.text-decoration-none(href='/')
+				a.text-decoration-none(href=headerUrl)
 					div.position-relative
 						if photo
 							img.rounded-circle(src=photo width='50px' height='50px')
