--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,7 +4,7 @@ html(lang="en")
 		if title	
 			title #{title}
 		else 
-			title Matt Thurmond
+			title Min blog
 		
 		// favicon
 		link(rel='icon' type='image/png' sizes='16x16' href='/static/img/favicon-16x16.png')
