streamline sign up flow

--- a/views/home.pug
+++ b/views/home.pug
@@ -8,7 +8,6 @@ block content
 			.display-6.mt-2.px-3.text-center A calmer blog with no distractions.
 			// or "Share your stories without distractions."
 		div.mt-2
-			a.mt-2.btn.btn-primary(href=`/login`) Login
+			a.mt-2.btn.btn-primary(href=`/register`) Create blog
 		div.mt-2
-			|No account? 
-			a.link-secondary(href='/register') Create one
+			a.link-secondary(href='/login') Login
