--- a/views/login.pug
+++ b/views/login.pug
@@ -2,8 +2,9 @@ extends layout
 
 block content
 	.container-md.pt-3.pb-5.mb-5(style='max-width: 45rem;')
+		h1 #{title} 
 		form(action=formAction, method="post")
-					
+
 			if page == 'register'
 				// name
 				.mb-5
@@ -23,3 +24,11 @@ block content
 			// button
 			.mb-5
 			button.btn.btn-primary(type='submit')= buttonLabel
+			if page == 'register'
+				div.mt-3
+					|Already have a blog here? 
+					a.link-secondary(href='/login') Login
+			if page == 'login'
+				div.mt-3
+					|Don't have a blog here yet? 
+					a.link-secondary(href='/register') Create one
