--- a/views/edit.pug
+++ b/views/edit.pug
@@ -15,7 +15,7 @@ block content
 
 			// status
 			.mb-5
-			label.form-label(for='status') Status
+			label.form-label.h5(for='status') Status
 			select#status.form-control.form-select(type='status' name='status')
 				if post.status == 'draft' 
 					option(value='live') Live
@@ -25,6 +25,6 @@ block content
 					option(value='draft') Draft
 
 			// action buttons
-			.text-center.mt-5.blog-sticky
+			.text-center.m-5
 				input.blog-cancel.btn.btn-secondary(type='button' name=page value='Cancel' data-slug=post.slug)
 				button.btn.btn-primary.mx-3(type='submit' name='submit-post') Save
