replace all /p routes with /username

--- a/views/edit.pug
+++ b/views/edit.pug
@@ -26,5 +26,5 @@ block content
 
 			// action buttons
 			.text-center.m-5
-				input.blog-cancel.btn.btn-secondary(type='button' name=page value='Cancel' data-slug=post.slug)
+				input.blog-cancel.btn.btn-secondary(type='button' name=page value='Cancel' data-username=username data-slug=post.slug)
 				button.btn.btn-primary.mx-3(type='submit' name='submit-post') Save
