--- a/views/new.pug
+++ b/views/new.pug
@@ -22,5 +22,5 @@ block content
 
 			// action buttons
 			.text-center.my-5
-				input.blog-cancel.btn.btn-secondary(type='button' name=page value='Cancel')
+				input.blog-cancel.btn.btn-secondary(type='button' name=page data-username=username value='Cancel')
 				button.btn.btn-primary.mx-3(type='submit' name='submit-post') Save
