--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,7 +7,10 @@ html(lang="en")
 			title Min blog
 		
 		// favicon
-		link(rel='icon' type='image/png' sizes='16x16' href='/static/img/favicon-16x16.png')
+		if photo
+			link(rel='icon' type='image/png' sizes='16x16' href=photo)
+		else
+			link(rel='icon' type='image/png' sizes='16x16' href='/static/img/favicon-16x16.png')
 		
 		// meta tags
 		meta(charset='utf-8')
