add footer link to minblog home screen

--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -1,7 +1,9 @@
 footer
 	.my-5.pt-3.pb-5.text-center
 		small.text-muted 
-			|View on 
+			|Minblog  
+			a.link-secondary(href='/') home
+			|&nbsp;&nbsp;|&nbsp;&nbsp;View on 
 			a.link-secondary(href='https://github.com/mthurmond/min-blog') github
 			|&nbsp;&nbsp;|&nbsp;&nbsp;Design from 
 			a.link-secondary(href='https://www.hey.com/world/') HEY
